Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -26,7 +26,7 @@
       "id": "45f4af51",
       "metadata": {
         "id": "45f4af51",
-        "outputId": "089e7d97-4b26-40ae-b8a2-1825d6c64141",
+        "outputId": "e4bc03c9-f3d8-4484-9df0-e24d261309b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,9 +42,9 @@
             "remote: Counting objects: 100% (98/98), done.\u001b[K\n",
             "remote: Compressing objects: 100% (69/69), done.\u001b[K\n",
             "remote: Total 98 (delta 39), reused 72 (delta 26), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (98/98), 21.03 MiB | 20.45 MiB/s, done.\n",
+            "Receiving objects: 100% (98/98), 21.03 MiB | 13.48 MiB/s, done.\n",
             "Resolving deltas: 100% (39/39), done.\n",
-            "--2025-11-12 19:46:57--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
+            "--2025-11-13 03:46:57--  https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -53,7 +53,7 @@
             "\n",
             "preprocess_data.py  100%[===================>]   7.88K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-11-12 19:46:57 (117 MB/s) - ‘preprocess_data.py’ saved [8066/8066]\n",
+            "2025-11-13 03:46:58 (88.4 MB/s) - ‘preprocess_data.py’ saved [8066/8066]\n",
             "\n"
           ]
         }
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "8140ee3f",
       "metadata": {
         "id": "8140ee3f"
@@ -1781,7 +1781,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "L4"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
