Mit Colab erstellt

--- a/Constrastive.ipynb
+++ b/Constrastive.ipynb
@@ -66,8 +66,7 @@
         "#!unzip -o train.zip -d data\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "!git clone https://github.com/Mamiglia/challenge.git\n",
-        "!wget https://raw.githubusercontent.com/tam4x/aml_challenge/refs/heads/main/preprocess_data.py\n"
+        "!git clone https://github.com/Mamiglia/challenge.git"
       ]
     },
     {
